--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </section>
             </article>
 
-            <article id="use-case-diagram">
+            <article id="leerling portaal">
                 <header>
                     <div class="title">
                         <h2>Use case diagram</h2>
