--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
                 </section>
             </article>
 
-            <article id="leerling portaal">
+            <article id="leerling portaal4">
                 <header>
                     <div class="title">
                         <h2>Use case diagram</h2>
                     </div>
                     <div class="meta">
-                        <img src="images/use-case-diagram.png">
+                        <img src="images/Schermafbeelding.png">
                     </div>
                 </header>
                 <section>
